Fix saving tag desktop files: the Tag entry was missing

BUG:442888